fixed  alignment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 
 .navbar {
   background-color: black !important;
+  margin-top: 0px;
 }
 
 .nav-link {
